--- a/index.qmd
+++ b/index.qmd
@@ -1,25 +1,7 @@
 ---
-title: "Overview"
+title: "AI Tools and Resources"
 format: html
 editor: visual
 ---
 
-## What is a Large Language Model?
-
-## Overview of AI tools
-
-### Writing tools
-
-### Research tools
-
-### Coding tools
-
-## Using local language models
-
-## Prompting
-
-### What makes a good prompt?
-
-### How to evaluate a prompt?
-
-### Meta prompting
+To come
